# compendium-harmonization

./: .dockerignore  .gitignore  404.html  LICENSE  Makefile  README.Rmd  README.md  Vagrantfile  __init__.py  bootstrap.sh  docker-compose.example.yaml  docker-compose.notebook.yaml  docker-compose.pipeline.yaml  docker-compose.replication.yaml  docker-compose.yaml  index.html  setenv.sh  setup.py  sitemap.xml
analysis/: pipeline.py  pipeline_utils.py  pipelines.py  repository.py
cfactor/: __init__.py  config.py  environment.py  nbar.py  surface_reflectance.py  tidy.py  toolbox.py  version.py
codes/: comparison_l8-l8.ipynb  copy-s2_angle-bands.py  generate-angle_l8.py  generate-angle_s2.py  pairing-lc8.py  pairing-s2.py  (+7 more)
docs/: .python-version  README.md  mkdocs.yml  pyproject.toml
docs/pages/: index.en.md  index.pt.md
docs/pages/reproducible-research/: index.en.md  index.pt.md
docs/pages/reproducible-research/minimal-example/: index.en.md  index.pt.md
docs/pages/reproducible-research/replication-example/: index.en.md  index.pt.md
docs/pages/tools/: index.en.md  index.pt.md
docs/pages/tools/environment/: index.en.md  index.pt.md
docs/pages/tools/libraries/: index.en.md  index.pt.md
docs/pages/tools/processing/: index.en.md  index.pt.md
docs/pages/tools/utilitary/: index.en.md  index.pt.md
tools/auxiliary-library/: pyproject.toml  pyproject.toml.bak  setup.py
tools/auxiliary-library/docs/source/: conf.py  index.rst  research_processing.rst  research_processing.validation.rst
tools/auxiliary-library/research_processing/: __init__.py  config.py  environment.py  nbar.py  surface_reflectance.py  tidy.py  toolbox.py  version.py
tools/auxiliary-library/research_processing/validation/: __init__.py  navigate.py  validation_funcs.py  validation_routines.py
tools/zenodo-download/: pyproject.toml  zenodo.py
(+117 files in other folders)
