[tool.poetry]
name = "research-processing"
version = "0.1.0"
description = ""
authors = ["Brazil Data Cube"]
license = "GPLv3"

classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.8"
rasterio = ">=1.2.6"
docker = ">=5.0.0"
matplotlib = ">=3.4.2"
Shapely = ">=1.7.1"
numpy = ">=1.21.1"
pandas = ">=1.3.2"

[tool.poetry.dev-dependencies]
Sphinx = ">=4.3.0"
sphinx-rtd-theme = ">=1.0.0"
sphinxcontrib-napoleon = ">=0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
