[tool.poetry]
name = "zenodo-download"
version = "0.1.0"
description = "Simple script to download record files from the Zenodo Service."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
tqdm = "^4.63.0"
pydash = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
